@@ -1,5 +1,5 @@
 <?php
-// $Id: page.tpl.php,v 1.29 2009-07-27 18:38:35 dries Exp $
+// $Id: page.tpl.php,v 1.30 2009-07-30 08:28:47 dries Exp $
 ?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN"
   "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<?php print $language->language ?>" dir="<?php print $language->dir ?>"
@@ -15,11 +15,7 @@
   </head>
   <body class="<?php print $classes ?>">
 
-  <?php if ($page_top): ?>
-    <div id="page-top-region" class="clearfix">
-      <?php print $page_top; ?>
-    </div>
-  <?php endif; ?>
+  <?php print $page_top; ?>
 
   <div id="header-region" class="clearfix"><?php print $header ?></div>
 
